<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.CurrencyChartFragment">

    <TextView
        android:id="@+id/tvChartName"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/current_base_currency"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="@+id/customChartView"
        app:layout_constraintBottom_toBottomOf="@+id/customChartView"
        app:layout_constraintStart_toStartOf="@+id/customChartView"
        app:layout_constraintEnd_toEndOf="@+id/customChartView"
        android:layout_margin="20dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/color_orange"
        app:layout_constraintDimensionRatio="H,1:1" />

    <com.shadi777.currency.rate.tracker.presentation.customview.CustomChartView
        android:id="@+id/customChartView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvChartName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupTimeRange"
       />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/radioGroupTimeRange"
        style="?attr/materialButtonToggleGroupStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/customChartView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:paddingHorizontal="16dp"
        app:singleSelection="true">

        <Button
            android:id="@+id/rbDay"
            style="@style/ToggleButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_time_range_label"
            />

        <Button
            android:id="@+id/rbWeek"
            style="@style/ToggleButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week_time_range_label"/>

        <Button
            android:id="@+id/rbMonth"
            style="@style/ToggleButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month_time_range_label"
            android:checked="true"/>

        <Button
            android:id="@+id/rbHalfYear"
            style="@style/ToggleButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/half_year_time_range_label"/>

        <Button
            android:id="@+id/rbYear"
            style="@style/ToggleButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year_time_range_label"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
